--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -1,29 +1,20 @@
 {% extends "site_base.html" %}
 
 	{% block  js_css_include %}
-	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.1.custom.js' %}"></script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>
+        <script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.1.custom.js' %}"></script>
 	<script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
 
 	<link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
-	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/jquery.calendar.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" >	
 	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.4.custom.min.js' %}"></script>
+
 	<script type="text/javascript" src="{% url static 'javascript/jquery.cleditor.min.js' %}"></script>
 	<link type="text/css" href="{% url static 'css/jquery.cleditor.css' %}" rel="Stylesheet" />
 
  	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" />
  	<link rel="stylesheet" href="{% url static 'css/campaign_widget.css' %}" type="text/css" />
-
-
 
 	<script type="text/javascript" src="{% url static 'javascript/farbtastic.js' %}" ></script>	
  	<link rel="stylesheet" href="{% url static 'css/colorpicker/farbtastic.css' %}" type="text/css" />
@@ -43,7 +34,7 @@
 
 <div id="widget-preview">
    <div id="ripple-embed">{{campaign.id}}</div>
-  <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js" ></script> 
+   <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js"></script> 
 </div>
 
 <div id="widget-features">
@@ -65,7 +56,7 @@
     
     <li>
         <label for="message">Message:&nbsp;&nbsp; </label>
-        <textarea cols=100 rows=6 id="widget-message">{{campaign.title}}</textarea>&nbsp;&nbsp;
+        <textarea id="widget-message">{{campaign.title}}</textarea>&nbsp;&nbsp;
     </li>
 
 
@@ -77,8 +68,9 @@
        <input name="widget-background-image" id="widget-background-image" type="file"> </input>
     </li>
     </ul>
+
     <button id="getcode"></button>
-    </div>
+</div>
 </div>
 
 <div id="dialog" title="Embeddable Code" style="display:none;">
@@ -94,153 +86,29 @@
 
 <script>
 
-  // background image
-  $("#widget-remove-img").click(function() {
-      $("#widget").css({'background-image': 'none'});
-            $("#widget-remove-img").hide();
-  });
-
-  $("#widget-background-image").change(function() {
-            var url = "{{host}}{%url static 'images/campaign/logos/widget/'%}{{campaign.id}}";
-            ajaxFileUpload("widget-background-image", function() {
-                    $("#widget").css({'background-image':'url(' + url + ')'})
-                }, 
-                {{campaign.id}}, "widget");
-            $("#widget-remove-img").show();
-            $("#widget-background-image").val(url);
-  }); 
-
   $("#getcode").text("<Get Embeddable Code>");
-  $("#widget").css({"height" : parseInt($("#widget-height").val()),
-                   "width" : parseInt($("#widget-width").val()),
-                   "background-color" : $("#widget-background-color").val(),
-});
- 
-  // text size
-  $("#widget-text-size").keyup(function(){
-      $("#widget").css({'font-size' : parseInt($("#widget-text-size").val())})
-      $("#text-size-slider").slider("value", parseInt($("#widget-text-size").val()));
-  });
-  $("#widget").css({'font-size' : parseInt($("#widget-text-size").val())})
-
-
-
-  // height
-  //$("#widget-height").keyup(function(){
-  //    $("#widget").height(parseInt($("#widget-height").val()))
-  //    $("#height-slider").slider("value", parseInt($("#widget-text-size").val()));
-  //});
-  //
-  //// width
-  //$("#widget-width").keyup(function(){
-  //    $("#widget").width(parseInt($("#widget-width").val()))
-  //    $("#width-slider").slider("value", parseInt($("#widget-text-size").val()));
-  //});
-
-
-
-  // background color 
-  $('#hide-color').click(function(){
-       $("#picker").slideUp('slow');
-       $('#hide-color').hide();
-  })
-  $('#picker').farbtastic(function (color) {
-     $('#widget-background-color').val(color);
-     $("#widget").css({'background-color': $('#widget-background-color').val()});
-  });
   
-  $('#widget-background-color').click(function(){
-        $("#picker").slideDown('slow');
-        $('#hide-color').show(); 
-  });
-
-  // text color 
-  //$('#hide-color2').click(function(){
-  //     $("#picker2").slideUp('slow');
-  //     $('#hide-color2').hide();
-  //})
-  //$('#picker2').farbtastic(function (color) {
-  //   $('#widget-text-color').val(color);
-  //   $("#widget").css({'color': $('#widget-text-color').val()});
-  //});
-  //
-  //$('#widget-text-color').click(function(){
-  //      $("#picker2").slideDown('slow');
-  //      $('#hide-color2').show(); 
-  //});
-
+ 
 
 
 $("#getcode").click(function(){
     $("#code").val("<div id=\'ripple-embed\'>{{campaign.id}}<\/div><script type=\'text\/javascript\' src=\'http:\/\/www.ripplefunction.com\/site_media\/javascript\/embed-iframe.js\' \>\<\/script\>");
-    alert("hello");
+    
+	  
 
     $("#dialog").dialog({
         "width": 500,
         "height": 400,
      });
-   
+    
 });
 
-// text size slider
-$("#text-size-slider").slider({value : $("#widget-text-size").val(),
-                               min: 0,
-                               max: 40,
-                               range: true,
-                               animate: true, 
-                               slide: function(event, ui) { 
-                                     $("#widget-text-size").val(ui.value);
-                                     $("#widget").css({'font-size': ui.value});
 
-                       }});
 
-// height slider
-$("#height-slider").slider({value : $("#widget-height").val(),
-                               min: 0,
-                               max: 600,
-                               range: true,
-                               animate: true, 
-                               slide: function(event, ui) { 
-                                     $("#widget-height").val(ui.value);
-                                     $("#widget").css({'height': ui.value});
-
-                       }});
-
-// width slider
-$("#width-slider").slider({value : $("#widget-width").val(),
-                               min: 0,
-                               max: 400,
-                               range: true,
-                               animate: true, 
-                               slide: function(event, ui) { 
-                                     $("#widget-width").val(ui.value);
-                                     $("#widget").css({'width': ui.value});
-
-                       }});
 
 // message
 $("#widget-message").cleditor({height: 120, width: "100%"});
-$("#widget").text($("#widget-message").html());
 
-
-
-$("#widget-message").cleditor().change(function(){
-    $("#widget").html($("#widget-message").val());
-});
-
-
-  // dragabble and resizable
-  $('#widget').draggable({ containment: '#widget-preview' });
-  $('#widget').resizable({
-   stop: function(event, ui) {
-                        $("#widget-height").val($("#widget").height());
-                        $("#widget-width").val($("#widget").width());
-                     },
-   resize: function(event, ui) {
-                        $("#widget-height").val($("#widget").height());
-                        $("#widget-width").val($("#widget").width());
-                     },
-  });
 </script>
 
 
