--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -85,29 +85,29 @@
 
 
 <script>
-//
-//  $("#getcode").text("<Get Embeddable Code>");
-//  
-// 
-//
-//
-//$("#getcode").click(function(){
-//    $("#code").val("<div id=\'ripple-embed\'>{{campaign.id}}<\/div><script type=\'text\/javascript\' src=\'http:\/\/www.ripplefunction.com\/site_media\/javascript\/embed-iframe.js\' \>\<\/script\>");
-//    
-//	  
-//
-//    $("#dialog").dialog({
-//        "width": 500,
-//        "height": 400,
-//     });
-//    
-//});
-//
-//
-//
-//
-//// message
-//$("#widget-message").cleditor({height: 120, width: "100%"});
+
+  $("#getcode").text("<Get Embeddable Code>");
+  
+ 
+
+
+$("#getcode").click(function(){
+    $("#code").val("<div id=\'ripple-embed\'>{{campaign.id}}<\/div><script type=\'text\/javascript\' src=\'http:\/\/www.ripplefunction.com\/site_media\/javascript\/embed-iframe.js\' \>\<\/script\>");
+    
+	  
+
+    $("#dialog").dialog({
+        "width": 500,
+        "height": 400,
+     });
+    
+});
+
+
+
+
+// message
+$("#widget-message").cleditor({height: 120, width: "100%"});
 //
 </script>
 
