--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -107,7 +107,29 @@ $("#getcode").click(function(){
 
 
 // message
-$("#widget-message").cleditor({height: 120, width: "100%"});
+$("#widget-message").cleditor({height: 120, 
+                               width: "100%",
+                               fonts:        // font names in the font popup
+                                     "Arial,Arial Black,Comic Sans MS,Courier New,Narrow,Garamond," +
+                                     "Georgia,Impact,Sans Serif,Serif,Tahoma,Trebuchet MS,Verdana",
+                               sizes:        // sizes in the font size popup
+                                     "1,2,3,4,5,6,7",
+                               controls:     // controls to add to the toolbar
+                                     "bold italic underline strikethrough | font size style | color highlight removeformat | rule image link | html",
+                               colors:       // colors in the color popup
+                        "FFF FCC FC9 FF9 FFC 9F9 9FF CFF CCF FCF " +
+                        "CCC F66 F96 FF6 FF3 6F9 3FF 6FF 99F F9F " +
+                        "BBB F00 F90 FC6 FF0 3F3 6CC 3CF 66C C6C " +
+                        "999 C00 F60 FC3 FC0 3C0 0CC 36F 63F C3C " +
+                        "666 900 C60 C93 990 090 399 33F 60C 939 " +
+                        "333 600 930 963 660 060 366 009 339 636 " +
+                        "000 300 630 633 330 030 033 006 309 303",  
+                             docCSSFile:   // CSS file used to style the document contained within the editor.
+                        "", 
+                         bodyStyle:    // style to assign to document body contained within the editor
+                        "margin:4px; font:10pt Arial,Verdana; cursor:text"
+
+});
 //
 </script>
 
