Fixing up some stuff.

--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -101,7 +101,7 @@ $("#getcode").click(function(){
 
 
 // message
-$("#widget-message").html("<div id='badge-title'>{{campaign.title}}</div><div id='badge-subtitle'>{{campaign.message}}</div><div id='badge-action'>JUST BY <b>Sharing</b> with friends:</div>");
+$("#widget-message").html("<font size='7'><div id='badge-title'>{{campaign.title}}</div></font-size><div id='badge-subtitle'>{{campaign.message}}</div><div id='badge-action'>JUST BY <b>Sharing</b> with friends:</div>");
 $("#widget-message").cleditor({height: 120, 
                                width: "100%",
                                fonts:        // font names in the font popup
