--- a/static/css/cross-site-badge.css
+++ b/static/css/cross-site-badge.css
@@ -58,6 +58,14 @@ div#badge-footer {
    -webkit-border-radius: 0px 0px 10px 10px;
    -moz-border-radius: 0px 0px 10px 10px;
 }
+div#badge-header {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0px;
+   -webkit-border-radius: 10px 10px 10px 10px;
+   -moz-border-radius: 10px 10px 10px 10px;
+}
 
 div#facebook-login-share {
     float: left;
