--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -161,7 +161,23 @@ $("#widget-message").cleditor({height: 120,
 
 // update idrame widget
 $("#refresh-iframe").click(function(){
-    $("#ripple-frame").attr("src", $("#ripple-frame").attr("src"));
+    $.ajax({ 
+                   url: "{% url ajax_update_widget %}", 
+	           dataType: "json", 
+	           data: {headercolor: $('#widget-background-color-top').val(), 
+                          camp_id: '{{campaign.id}}',   
+		          footercolor: $('#widget-background-color-bottom').val()},
+                          //htmlval: $("#widget-message").cleditor().select()},
+	           success: function (data) { 
+                          $("#ripple-frame").attr("src", $("#ripple-frame").attr("src"));
+                               },
+	           beforeSend: function() { 
+                          //alert
+                          //alert("cleditor val" + $("#widget-message").cleditor().html());
+                 } 
+
+    }); 
+
 });
 
 </script>
