--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -167,14 +167,13 @@ $("#refresh-iframe").click(function(){
     	           dataType: "json", 
     	           data: {headercolor: $('#widget-background-color-top').val(), 
                           camp_id: '{{campaign.id}}',   
-    		            footercolor: $('#widget-background-color-bottom').val()},
+    		            footercolor: $('#widget-background-color-bottom').val(),
                           htmlval: $("#widget-message").cleditor().attr("$area").html()},
     	           success: function (data) { 
                           $("#ripple-frame").attr("src", $("#ripple-frame").attr("src"));
                                },
     	           beforeSend: function() { 
-                          //alert
-                          //alert("cleditor val" + $("#widget-message").cleditor().html());
+                          alert($("#widget-message").cleditor().attr("$area").html());
                  } 
     
     }); 
