--- a/core/templates/widget.html
+++ b/core/templates/widget.html
@@ -1,5 +1,5 @@
-
-        <div id="ripple-badge" class="ripple-badge-overlay" style="height=100px;">
+     <div id="ripple-badge-wrapper"> 
+        <div id="ripple-badge" class="ripple-badge-overlay">
         <div id="badge-header">
 	 {% if html %}
          {% autoescape off %}
@@ -68,7 +68,7 @@
              </div>
 	 </div><!-- badge footer-->
 	</div> <!-- badge -->
-
+       </div>
 
 	<div id="overlay-blogger-login" class="overlay-blogger">
 
