--- a/static/css/cross-site-badge.css
+++ b/static/css/cross-site-badge.css
@@ -54,6 +54,7 @@ div#badge-footer {
    background-color: white;
    position: absolute;
    bottom: 0px;
+   left: 0px;
    -webkit-border-radius: 0px 0px 10px 10px;
    -moz-border-radius: 0px 0px 10px 10px;
 }
@@ -62,6 +63,7 @@ div#badge-header {
    height: 100%;
    position: absolute;
    top: 0px;
+   left: 0px;
    -webkit-border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
 }
@@ -97,8 +99,17 @@ div#ripple-badge {
 
 
 	background-color: #F2F2F2;
+        border: 1px solid gray;
 
 	font-size: 20px;
+	margin: 8px;
+}
+
+div#ripple-badge-wrapper {
+	width: 100%;
+        text-align: left;
+        height: 100%;
+	background-color: white;
 }
 
 .overlay-top p {
